fix: - removed outline from elements in focus - fixed horizontal scroll on portfolio page - fixed articles list styles in mobile view - fixed loading styles for mui components on refreshing page

--- a/components/BlogCommon/SelectionBlock/styles.module.scss
+++ b/components/BlogCommon/SelectionBlock/styles.module.scss
@@ -115,6 +115,7 @@
 
     .categoryTitleInHeader {
       display: none;
+      outline: none;
 
       @include phone {
         display: block;
