--- a/components/Common/AnimatedInput/styles.module.scss
+++ b/components/Common/AnimatedInput/styles.module.scss
@@ -3,6 +3,7 @@
 .animatedInput {
   margin-bottom: 35px;
   position: relative;
+  outline: none;
 
   @include flex(column);
 
