--- a/components/Common/SubscribeBlock/styles.module.scss
+++ b/components/Common/SubscribeBlock/styles.module.scss
@@ -168,6 +168,7 @@
           cursor: pointer;
           transition: 0.2s ease;
           transition-property: background-color, color;
+          outline: none;
 
           @include flex(row, center, center);
           @include fontSize(18px);
