--- a/components/Layout/Footer/styles.module.scss
+++ b/components/Layout/Footer/styles.module.scss
@@ -111,6 +111,7 @@ footer {
         transition:
           transform 0.4s cubic-bezier(0, 0, 0.2, 1),
           padding 0.4s cubic-bezier(0, 0, 0.2, 1);
+        outline: none;
 
         &:hover {
           transform: scale(0.98);
