--- a/components/PortfolioCommon/FieldsWrapper/styles.module.scss
+++ b/components/PortfolioCommon/FieldsWrapper/styles.module.scss
@@ -16,7 +16,7 @@
 
   @include phone {
     max-width: calc(100% - 40px);
-    font-size: 2.5rem;
+    font-size: 2.2rem;
     margin: 40px auto 25px 0;
   }
 
